--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
   </div>
 
   <script src="app.js"></script>
+
+  <iframe src="background.html" style="display:none;"></iframe>
 </body>
 
 </html>
